<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="34dp"
    tools:context=".MainActivity"
    android:background="@color/brand_color_2"
    >

<!--    전체 화면 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="14dp"
            >

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title_txt"
                android:textColor="@color/brand_color_3"
                android:textStyle="bold"
                android:textSize="24dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_10_list_txt"
                android:textSize="14dp"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>

        <!-- Title end -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/border_box"
                        android:layout_marginTop="14dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/common_txt"
                                android:textStyle="bold"
                                android:textColor="@color/brand_color_3"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/recent_10_list_txt"
                                android:textColor="@color/black"
                                />


                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@color/brand_color_3"
                            />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/main_common_list"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            >

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                    <!-- common list end -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/border_box"
                        android:layout_marginTop="28dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kongju_txt"
                                android:textStyle="bold"
                                android:textColor="@color/brand_color_3"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/recent_10_list_txt"
                                android:textColor="@color/black"
                                />


                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@color/brand_color_3"
                            />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/main_kongju_list"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            >

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                    <!-- kongju list end -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/border_box"
                        android:layout_marginTop="28dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cheonan_txt"
                                android:textStyle="bold"
                                android:textColor="@color/brand_color_3"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/recent_10_list_txt"
                                android:textColor="@color/black"
                                />


                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@color/brand_color_3"
                            />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/main_cheonan_list"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            >

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                    <!-- cheonan list end -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/border_box"
                        android:layout_marginTop="28dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yesan_txt"
                                android:textStyle="bold"
                                android:textColor="@color/brand_color_3"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/recent_10_list_txt"
                                android:textColor="@color/black"
                                />


                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@color/brand_color_3"
                            />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/main_yesan_list"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            >

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                    <!-- yesan list end -->

                </LinearLayout>


            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>